Convert/fix rules around syntax whitespaces

--- a/src/global_styling/mixins/_form.scss
+++ b/src/global_styling/mixins/_form.scss
@@ -179,8 +179,7 @@
   @if ($borderOnly) {
     box-shadow: inset 0 0 0 1px $euiFormBorderColor;
   } @else {
-    box-shadow:
-      inset 0 0 0 1px $euiFormBorderColor;
+    box-shadow: inset 0 0 0 1px $euiFormBorderColor;
   }
 }
 
