--- a/src/themes/amsterdam/overrides/_form_control_layout_delimited.scss
+++ b/src/themes/amsterdam/overrides/_form_control_layout_delimited.scss
@@ -12,8 +12,7 @@
     overflow: hidden;
   }
 
-  .euiFormControlLayout__prepend +
-  .euiFormControlLayout__childrenWrapper {
+  .euiFormControlLayout__prepend + .euiFormControlLayout__childrenWrapper {
     &:last-child {
       border-radius: 0 $euiFormControlBorderRadius $euiFormControlBorderRadius 0;
     }
@@ -31,8 +30,7 @@
       overflow: hidden;
     }
 
-    .euiFormControlLayout__prepend +
-    .euiFormControlLayout__childrenWrapper {
+    .euiFormControlLayout__prepend + .euiFormControlLayout__childrenWrapper {
       &:last-child {
         border-radius: 0 $euiFormControlCompressedBorderRadius $euiFormControlCompressedBorderRadius 0;
       }
